--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,6 +17,7 @@ body {
 body {
   background-color: #eee;
   font-family: "Poppins", sans-serif;
+  position: relative;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
@@ -81,12 +82,12 @@ header {
 .photos h2 {
   font-weight: 500;
   padding-bottom: 10px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid var(--color-one);
   display: inline-block;
 }
 .photos .photos-grid {
   margin-top: 30px;
-  height: 600px;
+  height: 550px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -110,6 +111,18 @@ header {
 }
 .photos .photos-grid div:nth-child(4) {
   grid-column: span 2;
+}
+footer {
+  margin-top: 30px;
+  text-align: center;
+  padding: 20px;
+  color: var(--color-three);
+  background-color: var(--color-one);
+  font-size: 12px;
+}
+footer a {
+  text-decoration: none;
+  color: inherit;
 }
 @media screen and (max-width: 480px) {
   .container {
